--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_all_guests">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.laecio.convidados.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/nav_all_guests"
+        android:name="com.laecio.convidados.ui.home.AllGuestsFragment"
+        android:label="@string/menu_all_guests"
+        tools:layout="@layout/fragment_all_guests" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.laecio.convidados.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_presents"
+        android:name="com.laecio.convidados.ui.gallery.PresentsFragment"
+        android:label="@string/menu_presents"
+        tools:layout="@layout/fragment_presents" />
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.laecio.convidados.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:name="com.laecio.convidados.ui.slideshow.AbsentsFragment"
+        android:label="@string/menu_absents"
+        tools:layout="@layout/fragments_absents" />
 </navigation>
