--- a/app/src/main/res/layout/fragments_absents.xml
+++ b/app/src/main/res/layout/fragments_absents.xml
@@ -6,5 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".view.AbsentsFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerAbsentsGuests"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
